--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.jpg);
+    background-image: url(images/background.png);
     background-size:cover;
     background-position: center;
 }
@@ -47,4 +47,37 @@ nav ul li a::after{
     position: absolute;
     left: 0;
     bottom: -6px;
+    transition: 0.5s;
+}
+nav ul li a:hover::after{
+    width: 100%;
+}
+.header-text{
+    margin-top: 20%;
+    font-size: 30x;
+}
+.header-text h1{
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+/* ----------about---- */
+#about{
+    padding: 80px 0;
+    color: #fff;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+.about-col-2{
+    flex-basis: 60%;
+    padding-left: 50px;
 }
